<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context="com.example.shiyan4_142.MainActivity" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/name" >
        </TextView>

        <EditText
            android:id="@+id/name"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:textSize="20dp" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/password" >
        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:inputType="textPassword"
            android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="18dp"
		    android:text="性别"/>
        <RadioGroup
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/man" />

            <RadioButton 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/woman"/>
        </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="18dp"
			    android:text="出生日期"/>
            <TextView 
	            android:id="@+id/birtherday"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="18dp"
		        android:text="2019-4-15">
    		</TextView>
        </LinearLayout>
    </LinearLayout>
	<TextView 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:textSize="18dp"
    	    android:text="联系方式">
    </TextView>

    <EditText
        android:id="@+id/tel"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:inputType="number|phone"
        android:textSize="20dp" >

    </EditText>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="部门"/>

            <Spinner
                android:id="@+id/dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="头像"/>
            <Spinner
                android:id="@+id/imagspin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
      </LinearLayout>
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18dp"
          android:text="@string/like"/>
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal">

        <CheckBox
            android:id="@+id/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="书籍"
            android:textSize="18dp" />

        <CheckBox 
            android:id="@+id/sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="运动"/>
        <CheckBox 
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="音乐"/>
        <CheckBox 
            android:id="@+id/movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="电影"/>
      </LinearLayout>

      <Button
          android:id="@+id/btnok"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/ok"
          android:textSize="18dp" >

      </Button>
</LinearLayout>